--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 host_key_checking = False
 inventory =./hosts
 nocows = 1
-#ansible_python_interpreter: /usr/bin/python3.11
+ansible_python_interpreter: /usr/bin/python3.11
 roles_patch=./roles
