--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,6 @@ inventory =./hosts
 nocows = 1
 ansible_python_interpreter: /usr/bin/python3.11
 roles_patch=./roles
+
+[ssh_connection]
+ssh_args = -o ForwardAgent=yes
